# fast_digits

./: README.md  main.py  pyproject.toml
src/: train.py
static/: index.js  styles.css
templates/: index.html
